# Pulsar

./: CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  temp.txt  vite.config.ts
.claude/: settings.json
.github/: dependabot.yml
.github/actions/setup-gh-cli/: action.yml
.github/workflows/: dev-prerelease.yml  pr-ci.yml  release.yml  test-runner.yml
docs/: milestone-0-findings.md
scripts/: fetch-mpv.mjs
src/: App.tsx  index.css  main.tsx  theme.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.appimage.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discord_rpc.rs  lastfm.rs  lib.rs  main.rs  media_session.rs  mpv.rs  notifications.rs  secrets.rs  updater.rs  waveform.rs  window_state.rs
src-tauri/src/waveform/: macos_capture.rs  windows_capture.rs
src/components/: ChannelArtwork.tsx  ChannelCard.tsx  ChannelGrid.tsx  ChannelList.tsx  ChannelListRow.tsx  ChannelModal.tsx  ChannelRow.tsx  CutTypeBadge.tsx  JumpRail.tsx  NowPlayingPanel.tsx  SettingsModal.tsx  TransportBar.tsx  UpdateModal.tsx  Waveform.tsx
src/components/onboarding/: StellarApiScreen.tsx
src/lib/: alertNotify.tsx  alertPersistence.test.ts  alertPersistence.ts  channelJumpGroups.test.ts  channelJumpGroups.ts  channelLogo.test.ts  channelLogo.ts  channelMatcher.test.ts  channelMatcher.ts  channelSearch.test.ts  channelSearch.ts  cutType.test.ts  cutType.ts  discordRpc.test.ts  discordRpc.ts  equalizer.test.ts  equalizer.ts  mediaSession.ts  mpvClient.ts  recommendations.test.ts  recommendations.ts  scrobbling.test.ts  scrobbling.ts  secrets.ts  songMatcher.test.ts  songMatcher.ts  stellarTunerLog.test.ts  stellarTunerLog.ts  waveform.ts  xtream.test.ts  xtream.ts
src/pages/: Channels.tsx  Favorites.tsx  Home.tsx  Recent.tsx  Settings.tsx
src/stores/: alertsStore.ts  channelStore.ts  libraryStore.ts  playerStore.test.ts  playerStore.ts  settingsStore.ts  updateStore.ts
src/types/: player.ts  stellarTunerLog.ts  xtream.ts
