[package]
name = "apogee"
version = "0.1.0"
description = "Xtream Codes radio tuner"
authors = ["you"]
license-file = "../LICENSE"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apogee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["process", "net", "io-util", "rt", "time", "macros", "sync"] }
souvlaki = "0.8"
discord-rich-presence = "1.1.0"
rustfft = "6"
url = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
win32job = "2"
cpal = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSObject"] }
objc2-core-audio = { version = "0.3", features = ["AudioHardware", "objc2", "objc2-core-audio-types"] }
objc2-core-audio-types = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFDictionary", "CFArray", "CFString", "CFNumber", "CFBase"] }
